--- a/templates/HTMLeye.html
+++ b/templates/HTMLeye.html
@@ -150,14 +150,14 @@ if(l>=0 && l<=20){
     <br>
     <br>
     <br>
-    <div style="color: white; background-color: rgba(0,0,0,0.2);padding-left: 2%; font-size: 120%;">
+    <div style="color: white; background-color: rgba(0,0,0,0.2);padding-left: 2%;">
         EYE DISEASE PREDICTION:<br><br>
         This prediction focusses on predicting diseases like Cataract,Glaucoma,Eye strain,Dry eye Syndrome,Diabetic Retinopathy,Eye strain and Conjunctivitis.
         Here Given a list of symptoms which help the machine to prediction the disease and its Treatment. Give the appropriate Disease Number in the  Symptom column and predicct the disease.
     </div>
  <div class="login" style="  background-color: rgba(0,0,0,0.2);">
 	<h1 style="color: white; padding-left:40%;">Eye Disease Prediction</h1>
-     <p style="color: white; background-color: rgba(0,0,0,0.2);padding-left: 2%; font-size: 120%;">Enter the Symptoms numbers based on the data given below<br>1:Cloudy vision/Blurred Vision<br>2:Sensitivity to light<br>3:Poor vision at night<br>4:Double vision<br>5:Eye pain<br>6:Red-eye<br>7:Vision Loss<br>8:Dry or watery eyes<br>9:burning or itching<br>10:Tired<br>11:Blurred vision for distant objects, near objects, or both<br>12:Headache<br>13:Irritation, itching<br>14:Foreign body sensation eye discomfort<br>15:Burning<br>16:Itching<br>17:Loss of vision<br>18:Blurred Vision<br>19:Discharge or stickiness</p>
+     <p style="color: white; background-color: rgba(0,0,0,0.2);padding-left: 2%; ">Enter the Symptoms numbers based on the data given below<br>1:Cloudy vision/Blurred Vision<br>2:Sensitivity to light<br>3:Poor vision at night<br>4:Double vision<br>5:Eye pain<br>6:Red-eye<br>7:Vision Loss<br>8:Dry or watery eyes<br>9:burning or itching<br>10:Tired<br>11:Blurred vision for distant objects, near objects, or both<br>12:Headache<br>13:Irritation, itching<br>14:Foreign body sensation eye discomfort<br>15:Burning<br>16:Itching<br>17:Loss of vision<br>18:Blurred Vision<br>19:Discharge or stickiness</p>
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post" style='color: white;  text-align:center; font-size: 150%;'>
