--- a/templates/HTMLeye.html
+++ b/templates/HTMLeye.html
@@ -106,9 +106,11 @@ function add()
   numTwo = parseInt(document.getElementById("second").value);
   numThree= parseInt(document.getElementById("third").value);
   sum = ((numOne + numTwo +numThree)/3)*10; 
-  l=sum;
-       document.getElementById("answer").value = sum;
-if(l>=0 && l<=20){
+  l=int(sum);
+       document.getElementById("answer").value = int(sum);
+ if(l=='NaN'){
+   document.getElementById("text").innerHTML ="please enter the values";}
+else if(l>=0 && l<=20){
         document.getElementById("text").innerHTML ="Consult a Doctor for Medication. Checkup is recommended.";}
   else if(l>=21 && l<=40){
         document.getElementById("text").innerHTML ="medication is compulsory.Must  Go for checkup at periodical time.";}
