--- a/templates/HTMLeye.html
+++ b/templates/HTMLeye.html
@@ -109,7 +109,7 @@ function add()
   l=sum;
 	if(sum!=null){
        document.getElementById("answer").value = int(sum);}
- if(l===null){
+ if(l==null){
    document.getElementById("text").innerHTML ="please enter the values";}
 else if(l>=0 && l<=20){
         document.getElementById("text").innerHTML ="Consult a Doctor for Medication. Checkup is recommended.";}
