--- a/templates/HTMLeye.html
+++ b/templates/HTMLeye.html
@@ -127,36 +127,40 @@ function add()
 }
 </script>
 <body style="background-color: lightsalmon;">
-<div  class='title'>
-        <p class='3'><img class="cropped1" src="https://drive.google.com/thumbnail?id=1JQ6epr36ugrVF7cuTlYMw9kL7J-pZrfd" width=5% height="5%">&nbsp HEALTH COMPANION</p>
+<div class='title'>
+      <p><img class="cropped1" src="https://drive.google.com/thumbnail?id=1JQ6epr36ugrVF7cuTlYMw9kL7J-pZrfd" width=5% height="5%">&nbsp HEALTH COMPANION</p>
     </div>
     <br><br>
     <div id=head>
         <div class="navbar">
-             <a href="#home">HOME</a>
-             <a href="#news">BLOG</a>
-             <a href='Consulting%20doctors.html'>CONSULTING</a>
-             <a href=''>CHECK MY HEALTH</a>
-             <a href="AI%20predictions.html">AI PREDICTIONS</a>
-	     <a href="">HOSPITAL FOR CONSULTING</a>
-             <a href="">SCAN CENTRE AND HOSPITALS</a>
+             <a href="#home" style="padding-top:  2%; padding-bottom: 2%">HOME</a>
+             <a href="#news" style="padding-top:  2%;padding-bottom: 2%">BLOG</a>
+            <a href='Consulting%20doctors.html' style="padding-top: 2%;padding-bottom: 2%">CONSULTING</a>
+             <a href='' style="padding-top: 2%;padding-bottom: 2%">CHECK MY HEALTH</a>
+             <a href="AI%20predictions.html" style="padding-top: 2%;padding-bottom: 2%">AI PREDICTIONS</a>
+                  <div class="dropdown">
+                      <button class="dropbtn"><a href="Hospital.html">HOSPITAL CONSULTING</a>
+                  <i class="fa fa-caret-down"></i>
+                  </button>
+             <div class="dropdown-content">
+                 <a href="mprivate.html">PRIVATE HOSPITAL</a>
+                 <a href="mpst2.html">GOVERNMENT HOSPITAL</a>
+             </div>
+	         </div>
+             <a href="" style="padding-top: 2%;padding-bottom: 2%">SCAN CENTRE AND HOSPITALS</a>
              <div class="dropdown">
-                  <button class="dropbtn">MORE 
+                 <button class="dropbtn" ><a>MORE</a> 
                   <i class="fa fa-caret-down"></i>
                   </button>
              <div class="dropdown-content">
                  <a href="HealthyTips.html">HEALTH TIPS</a>
-                 <a href="#">FOOD INFO</a>
+                 <a href="food1-1.html">FOOD INFO</a>
                   <a href="Disease%20information.html">DISEASE INFO</a>
              </div>
              </div> 
-         </div>
+        </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br><br><br><br><br><br>
     <div style="color: white; background-color: rgba(0,0,0,0.2);padding-left: 2%;">
         EYE DISEASE PREDICTION:<br><br>
         This prediction focusses on predicting diseases like Cataract,Glaucoma,Eye strain,Dry eye Syndrome,Diabetic Retinopathy,Eye strain and Conjunctivitis.
