--- a/templates/HTMLeye.html
+++ b/templates/HTMLeye.html
@@ -11,16 +11,22 @@
   
 </head>
     <style>
-    body
+  body::-webkit-scrollbar
     {
-        background-image: url("https://64.media.tumblr.com/5619757016199f1a1afb9c40ab366f6a/tumblr_ofnkfuN8Xl1ulyzhco1_500.gif");
-        background-image: url("https://cdn.dribbble.com/users/1499798/screenshots/3954021/heart-line.gif");
-
+        display:none;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;
+        
     }
+        body
+        {
+            background-color:rgba(	255, 159, 88);
+            filter: brightness(85%)
+        }
 .navbar,.navbar1,.desc{
   overflow: hidden;
-  background-color: rgba(0,0,0,0.2);
-  font-family: Arial, Helvetica, sans-serif;
+
+  font-family: sans-serif,monospace;
 }
 
 .navbar a {
@@ -31,52 +37,6 @@
    padding: 14px 16px;
   text-decoration: none;
 }
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: lightsalmon;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: rgba(0,0,0,0.2);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: lightsalmon;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 img
     {
         padding-left: 4%;
@@ -85,18 +45,61 @@ img
     }
 .cropped1
     {
-        padding: 0%;
-        width: 5%;
-        height: 5%;
+           padding-left: 2%;
         vertical-align: middle;
         font-size: 150%;
     }
-.title{
-              background-color: rgba(0,0,0,0.2);
+.navbar{
+    background-color: #555;
+
         color: white;
-        font-size: 150%;
-        padding: 2%
+        font-size: auto;
+        font-size: 80%;
+    font-style: italic;
+    font-family:cursive;
+        padding-left: 2%;
+ 
     }
+div.scrollmenu {
+    padding-top: 1%;
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+    font-family: cursive,monospace;
+}
+
+div.scrollmenu a:hover {
+  background-color: #777;
+}
+.scrollmenu {
+  background-color: #eee;
+  width: 100%;
+  height: 100%;
+  border: 1px dotted black;
+  overflow-y: scroll; /* Add the ability to scroll */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollmenu::-webkit-scrollbar {
+    width: 2%;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollmenu {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: 2%;  /* Firefox */
+}
+        .mySlides{
+            display: none;
+        }
     </style>
 <script>
 function add()
@@ -107,71 +110,86 @@ function add()
   numThree= parseInt(document.getElementById("third").value);
   sum = ((numOne + numTwo +numThree)/3)*10; 
   l=sum;
-    if( isNaN(numOne) || isNaN(numTwo) || isNaN(numThree)){
-       document.getElementById("text").innerHTML ="Please enter the number values range from 1-10";}
-   else if(l>=0 && l<=20){
-               document.getElementById("answer").value = sum.toFixed();
+       document.getElementById("answer").value = sum;
+if(l>=0 && l<=20){
         document.getElementById("text").innerHTML ="Consult a Doctor for Medication. Checkup is recommended.";}
   else if(l>=21 && l<=40){
-              document.getElementById("answer").value = sum.toFixed();
         document.getElementById("text").innerHTML ="medication is compulsory.Must  Go for checkup at periodical time.";}
   else if(l>=41 && l<=60){
-              document.getElementById("answer").value = sum.toFixed();
         document.getElementById("text").innerHTML="Consultation and Medication must be taken. consult doctor weekly twice and follow the mediation.";}
   else if(l>=61 && l<=80){
-              document.getElementById("answer").value = sum.toFixed();
         document.getElementById("text").innerHTML ="Medication or surgery (if should) must be taken. test and consultation is compulsory.";}
   else{
-              document.getElementById("answer").value = sum.toFixed();
         document.getElementById("text").innerHTML ="Immediate Consultation and sugery(If must) must be done. follow medication before or after surgery if done.";}  
 }
+var slideIndex = 0;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+    
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
+}  
 </script>
-<body style="background-color: lightsalmon;">
-<div class='title'>
-      <p><img class="cropped1" src="https://drive.google.com/thumbnail?id=1JQ6epr36ugrVF7cuTlYMw9kL7J-pZrfd" width=5% height="5%">&nbsp HEALTH COMPANION</p>
-    </div>
-    <br><br>
-    <div id=head>
-        <div class="navbar">
-             <a href="#home" style="padding-top:  2%; padding-bottom: 2%">HOME</a>
-             <a href="#news" style="padding-top:  2%;padding-bottom: 2%">BLOG</a>
-            <a href='Consulting%20doctors.html' style="padding-top: 2%;padding-bottom: 2%">CONSULTING</a>
-             <a href='' style="padding-top: 2%;padding-bottom: 2%">CHECK MY HEALTH</a>
-             <a href="AI%20predictions.html" style="padding-top: 2%;padding-bottom: 2%">AI PREDICTIONS</a>
-                  <div class="dropdown">
-                      <button class="dropbtn"><a href="Hospital.html">HOSPITAL CONSULTING</a>
-                  <i class="fa fa-caret-down"></i>
-                  </button>
-             <div class="dropdown-content">
-                 <a href="mprivate.html">PRIVATE HOSPITAL</a>
-                 <a href="mpst2.html">GOVERNMENT HOSPITAL</a>
-             </div>
-	         </div>
-             <a href="" style="padding-top: 2%;padding-bottom: 2%">SCAN CENTRE AND HOSPITALS</a>
-             <div class="dropdown">
-                 <button class="dropbtn" ><a>MORE</a> 
-                  <i class="fa fa-caret-down"></i>
-                  </button>
-             <div class="dropdown-content">
+<body >
+<div class='navbar' id='title'>
+
+    <p style="font-size: 140%"><img class="cropped1" src="https://drive.google.com/thumbnail?id=1JQ6epr36ugrVF7cuTlYMw9kL7J-pZrfd" width=5%; height="5%;">&nbsp HEALTH COMPANION</p></div>
+    <div class="scrollmenu">
+             <a href="#home" >HOME</a>
+             <a href="#news" >BLOG</a>
+            <a href='Consulting%20doctors.html' >CONSULTING</a>
+             <a href='' >CHECK MY HEALTH</a>
+             <a href="AI%20predictions.html" >AI PREDICTIONS</a>
+             <a href="Hospital.html">HOSPITAL CONSULTING</a>      
+             <a href="" >SCAN CENTRE AND HOSPITALS</a>
                  <a href="HealthyTips.html">HEALTH TIPS</a>
                  <a href="food1-1.html">FOOD INFO</a>
                   <a href="Disease%20information.html">DISEASE INFO</a>
              </div>
-             </div> 
-        </div>
-    </div>
-    <br><br><br><br><br><br>
-    <div style="color: white; background-color: rgba(0,0,0,0.2);padding-left: 2%;">
-        EYE DISEASE PREDICTION:<br><br>
-        This prediction focusses on predicting diseases like Cataract,Glaucoma,Eye strain,Dry eye Syndrome,Diabetic Retinopathy,Eye strain and Conjunctivitis.
-        Here Given a list of symptoms which help the machine to prediction the disease and its Treatment. Give the appropriate Disease Number in the  Symptom column and predicct the disease.
-    </div>
- <div class="login" style="  background-color: rgba(0,0,0,0.2);">
-	<h1 style="color: white; padding-left:40%;">Eye Disease Prediction</h1>
-     <p style="color: white; background-color: rgba(0,0,0,0.2);padding-left: 2%; ">Enter the Symptoms numbers based on the data given below<br>1:Cloudy vision/Blurred Vision<br>2:Sensitivity to light<br>3:Poor vision at night<br>4:Double vision<br>5:Eye pain<br>6:Red-eye<br>7:Vision Loss<br>8:Dry or watery eyes<br>9:burning or itching<br>10:Tired<br>11:Blurred vision for distant objects, near objects, or both<br>12:Headache<br>13:Irritation, itching<br>14:Foreign body sensation eye discomfort<br>15:Burning<br>16:Itching<br>17:Loss of vision<br>18:Blurred Vision<br>19:Discharge or stickiness</p>
+  <br>
+  <br>
+  <br>
+    <div style="color: white; background-color: #333;">
+        <div class="navbar1" style='align-self:  center; color: white; font-display:auto; padding: 5%; font-size: 150%; background-color: #555;'>
+    <div class="split left" style="float:left;width: 45%;">
+   <div class="w3-content w3-section" >
+       <p style="text-align: center;">CLICK RIGHT ARROW TO KNOW MORE</p>
+       <!-- Navigation arrows -->  
+        <a class="left" onclick="plusDivs(-1)" style="float:left;padding-top: -15;">❮</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <a class="right" onclick="plusDivs(1)" style="float:right;">❯</a> 
+       <div class='id1'><img class="mySlides" src="https://www.optometrists.org/wp-content/uploads/2020/06/cataract-eye-crossection-copy.jpg" width="500px" height="250px"style="align-content: center;"></div>
+       <div class='id2'><img class="mySlides"  src="https://bloximages.newyork1.vip.townnews.com/kctv5.com/content/tncms/assets/v3/editorial/5/5d/55def13c-c2a9-11e9-9b12-e73ae695c560/5d5ae0a4ef3e3.image.jpg?crop=1314%2C1314%2C131%2C0&resize=1314%2C1314&order=crop%2Cresize"width="500px" height="250px"></div>
+      <div class='id3'> <img class="mySlides"  src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/topic_centers/EyeHealth/eye-strain-infographic.png?w=1155&h=1680" width="500px" height="250px"></div>
+       <div class='id4'> <img class="mySlides"  src="https://www.lifetimeeyes.com/wp-content/uploads/2020/01/dry-eye-symptoms.jpeg" width="500px" height="250px"></div>
+       <div class='id5'> <img class="mySlides"  src="https://www.aoa.org/AOA/Images/Patients/Eye%20Conditions/Diabetic_Retinopathy1_AdobeStock_190242073.jpg" width="500px" height="250px"></div>
+      <div class='id6'> <img class="mySlides"  src="https://west-sussex-family-assist.custhelp.com/euf/assets/images/Answer_Mailing_Content/Answer_ID-314/types.png" width="500px" height="250px"></div>
+   
+</div>
+            </div>
+<div class="split right" style="float:right;width: 50%;">
+     <br><br><br>
+    <p style="padding-left: 2%; ">EYE DISEASE PREDICTION:</p>
+        <p style="padding-left: 2%; ">This prediction focusses on predicting diseases like Cataract,Glaucoma,Eye strain,Dry eye Syndrome,Diabetic Retinopathy and Conjunctivitis. Here Given a list of symptoms which help the machine to prediction the disease and its Treatment. Give the appropriate Disease Number in the  Symptom column and predicct the disease.</p><br><br><br><br>
+</div>
+        </div> </div>  
+<br><br>
+ <div class="login" style="  background-color: #333;font-family: cursive;"><br><br>
+	<h1 style="color: white; text-align: center;">Eye Disease Prediction</h1>
+     <p style="color: white;padding-left: 9%; ">Enter the Symptoms numbers based on the data given below<br>1:Cloudy vision/Blurred Vision<br>2:Sensitivity to light<br>3:Poor vision at night<br>4:Double vision<br>5:Eye pain<br>6:Red-eye<br>7:Vision Loss<br>8:Dry or watery eyes<br>9:burning or itching<br>10:Tired<br>11:Blurred vision for distant objects, near objects, or both<br>12:Headache<br>13:Irritation, itching<br>14:Foreign body sensation eye discomfort<br>15:Burning<br>16:Itching<br>17:Loss of vision<br>18:Blurred Vision<br>19:Discharge or stickiness</p>
 
      <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="post" style='color: white;  text-align:center;'>
+    <form action="{{ url_for('predict')}}"method="post" style='color: white;  text-align:center; font-size: 150%;'>
         <p>Enter the First Symptom:<input type="text" name="Enter the Symptom 1" placeholder="Enter the Symptom 1" required="required" /></p><br><br>
         <p>Enter the Second Symptom:<input type="text" name="Enter the Symptom 2" placeholder="Enter the Symptom 2" required="required" /></p><br><br>
         <p>Enter the Third Symptom:<input type="text" name="Enter the Sympotom 3" placeholder="Enter the Sympotom 3" required="required" /></p><br><br>
@@ -180,14 +198,14 @@ function add()
     </div>
    <br>
    <br>
-     <div style='color: white; background-color: rgba(0,0,0,0.2);text-align: center; font-size: 150%;'>
+     <div style='color: white; background-color: #333;text-align: center; font-size: 150%;'>
          <br><br>
      {{ prediction_text }}
          <br>
-         <br>
-     </div>
-    <div style="color: white; background-color: rgba(0,0,0,0.2);text-align:center; font-size: 120%;">
-        <h2>CHECK THE RISK LEVEL OF DISEASE</h2><br>
+         <br><br>
+     </div><br><br>
+    <div style="color: white; background-color:#333;text-align:center; font-size: 150%;"><br><br>
+        <h4>CHECK THE RISK LEVEL OF DISEASE</h4><br>
         <p>Enter the range within 1-10</p><br>
         <p>Enter the effect of Symptom 1:<input id="first"></p>
         <p>Enter the effect of Symptom 2:<input id="second"></p>
