--- a/templates/HTMLeye.html
+++ b/templates/HTMLeye.html
@@ -20,8 +20,8 @@
     }
         body
         {
-            background-color:rgba(	255, 159, 88);
-            filter: brightness(85%)
+            background-image: url('https://thumbs.gfycat.com/AmazingSpecificAndalusianhorse-size_restricted.gif');      
+            background-blend-mode: darken(70%);
         }
 .navbar,.navbar1,.desc{
   overflow: hidden;
@@ -32,7 +32,7 @@
 .navbar a {
   float: left;
   font-size: 16px;
-  color: white;
+  color: rgb(30,144,255);
   text-align: center;
    padding: 14px 16px;
   text-decoration: none;
@@ -50,26 +50,25 @@ img
         font-size: 150%;
     }
 .navbar{
-    background-color: #555;
-
-        color: white;
-        font-size: auto;
-        font-size: 80%;
+   background-image: url('https://image.freepik.com/free-photo/shades-blue-white-background_23-2147746645.jpg');
+    background-color: rgba(0,0,0, 0.3);
+    background-blend-mode: darken;
+    color: white;
+    font-size: 100%;
     font-style: italic;
     font-family:cursive;
         padding-left: 2%;
- 
     }
 div.scrollmenu {
-    padding-top: 1%;
-  background-color: #333;
+     padding-top: 1%;
+    
   overflow: auto;
   white-space: nowrap;
 }
 
 div.scrollmenu a {
   display: inline-block;
-  color: white;
+  color: rgb(30,144,255);
   text-align: center;
   padding: 14px;
   text-decoration: none;
@@ -77,13 +76,12 @@ div.scrollmenu a {
 }
 
 div.scrollmenu a:hover {
-  background-color: #777;
+ background-color: rgb(135,206,235);
 }
 .scrollmenu {
   background-color: #eee;
   width: 100%;
   height: 100%;
-  border: 1px dotted black;
   overflow-y: scroll; /* Add the ability to scroll */
 }
 
@@ -147,20 +145,21 @@ function showDivs(n) {
     <p style="font-size: 140%"><img class="cropped1" src="https://drive.google.com/thumbnail?id=1JQ6epr36ugrVF7cuTlYMw9kL7J-pZrfd" width=5%; height="5%;">&nbsp HEALTH COMPANION</p></div>
     <div class="scrollmenu">
              <a href="#home" >HOME</a>
-            <a href='Consulting%20doctors.html' >CONSULTING</a>
+             <a href='Consulting%20doctors.html' >CONSULTING</a>
              <a href='https://aiforecasting.herokuapp.com/' >CHECK MY HEALTH</a>
              <a href="AI%20predictions.html" >AI PREDICTIONS</a>
-             <a href="Hospital.html">HOSPITAL CONSULTING</a>      
+             <a href="Hospital.html">HOSPITAL CONSULTING</a>    
              <a href="" >SCAN CENTRE AND HOSPITALS</a>
-                 <a href="HealthyTips.html">HEALTH TIPS</a>
-                 <a href="food1-1.html">FOOD INFO</a>
-                  <a href="Disease%20information.html">DISEASE INFO</a>
+             <a href="HealthyTips.html">HEALTH TIPS</a>
+             <a href="food1-1.html">FOOD INFO</a>
+             <a href="Disease%20information.html">DISEASE INFO</a>
              </div>
   <br>
   <br>
   <br>
-    <div style="color: white; background-color: #333;">
-        <div class="navbar1" style='align-self:  center; color: white; font-display:auto; padding: 5%; font-size: 150%; background-color: #555;'>
+    <div style="color: white; ">
+        <div class="navbar1" style='align-self:  center; color: white; font-display:auto; padding: 5%; font-size: 150%; background-image:url(https://c4.wallpaperflare.com/wallpaper/227/186/573/blue-background-shades-wallpaper-preview.jpg);background-repeat: no-repeat;background-size: cover;background-color: rgba(0,0,0, 0.2);
+    background-blend-mode: darken; '>
     <div class="split left" style="float:left;width: 45%;">
    <div class="w3-content w3-section" >
        <p style="text-align: center;">CLICK RIGHT ARROW TO KNOW MORE</p>
@@ -183,27 +182,94 @@ function showDivs(n) {
 </div>
         </div> </div>  
 <br><br>
- <div class="login" style="  background-color: #333;font-family: cursive;"><br><br>
+<br><br>
+<br><br>
+ <div class="login" style=" background-image: url(https://png.pngtree.com/thumb_back/fw800/back_our/20190622/ourmid/pngtree-business-atmosphere-blue-gradient-texture-shading-background-image_218514.jpg); font-family: cursive;background-repeat: no-repeat;background-size: cover;background-color: rgba(0,0,0, 0.4);
+    background-blend-mode: darken;"><br><br>
 	<h1 style="color: white; text-align: center;">Eye Disease Prediction</h1>
-     <p style="color: white;padding-left: 9%; ">Enter the Symptoms numbers based on the data given below<br>1:Cloudy vision/Blurred Vision<br>2:Sensitivity to light<br>3:Poor vision at night<br>4:Double vision<br>5:Eye pain<br>6:Red-eye<br>7:Vision Loss<br>8:Dry or watery eyes<br>9:burning or itching<br>10:Tired<br>11:Blurred vision for distant objects, near objects, or both<br>12:Headache<br>13:Irritation, itching<br>14:Foreign body sensation eye discomfort<br>15:Burning<br>16:Itching<br>17:Loss of vision<br>18:Blurred Vision<br>19:Discharge or stickiness</p>
-
+     <br><br><br>
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post" style='color: white;  text-align:center; font-size: 150%;'>
-        <p>Enter the First Symptom:<input type="text" name="Enter the Symptom 1" placeholder="Enter the Symptom 1" required="required" /></p><br><br>
-        <p>Enter the Second Symptom:<input type="text" name="Enter the Symptom 2" placeholder="Enter the Symptom 2" required="required" /></p><br><br>
-        <p>Enter the Third Symptom:<input type="text" name="Enter the Sympotom 3" placeholder="Enter the Sympotom 3" required="required" /></p><br><br>
+        <label for="cars">Enter The Symptom One:</label>
+        <select name="cars" id="cars">
+            <option value="Cloudy vision/Blurred Vision">Cloudy vision/Blurred Vision</option>
+  <option value="Sensitivity to light">Sensitivity to light</option>
+  <option value="Poor vision at night">Poor vision at night</option>
+  <option value="Double vision">Double vision</option>
+  <option value="Eye pain">Eye pain</option>
+  <option value="Red-eye">Red-eye</option>
+  <option value="Vision Loss">Vision Loss</option>
+  <option value="Dry or watery eyes">Dry or watery eyes</option>
+  <option value="burning or itching">burning or itching</option>
+  <option value="Tired">Tired</option>
+  <option value="Blurred vision for distant objects, near objects, or both">Blurred vision for distant objects, near objects, or both</option>
+  <option value="Headache">Headache</option>
+  <option value="Irritation, itching">Irritation, itching</option>
+  <option value="Foreign body sensation eye discomfort">Foreign body sensation eye discomfort</option>
+  <option value="Burning">Burning</option>
+  <option value="Itching">Itching</option>
+  <option value="Loss of vision">Loss of vision</option>
+  <option value="Blurred Vision">Blurred Vision</option>
+  <option value="Discharge or stickiness">Discharge or stickiness</option>
+        </select><br><br><br>
+        <label for="cars">Enter The Symptom Two:</label>
+        <select name="cars1" id="cars1">
+            <option value="Cloudy vision/Blurred Vision">Cloudy vision/Blurred Vision</option>
+  <option value="Sensitivity to light">Sensitivity to light</option>
+  <option value="Poor vision at night">Poor vision at night</option>
+  <option value="Double vision">Double vision</option>
+  <option value="Eye pain">Eye pain</option>
+  <option value="Red-eye">Red-eye</option>
+  <option value="Vision Loss">Vision Loss</option>
+  <option value="Dry or watery eyes">Dry or watery eyes</option>
+  <option value="burning or itching">burning or itching</option>
+  <option value="Tired">Tired</option>
+  <option value="Blurred vision for distant objects, near objects, or both">Blurred vision for distant objects, near objects, or both</option>
+  <option value="Headache">Headache</option>
+  <option value="Irritation, itching">Irritation, itching</option>
+  <option value="Foreign body sensation eye discomfort">Foreign body sensation eye discomfort</option>
+  <option value="Burning">Burning</option>
+  <option value="Itching">Itching</option>
+  <option value="Loss of vision">Loss of vision</option>
+  <option value="Blurred Vision">Blurred Vision</option>
+  <option value="Discharge or stickiness">Discharge or stickiness</option>
+        </select><br><br><br>
+        <label for="cars">Enter The Symptom Three:</label>
+        <select name="cars2" id="cars2">
+            <option value="Cloudy vision/Blurred Vision">Cloudy vision/Blurred Vision</option>
+  <option value="Sensitivity to light">Sensitivity to light</option>
+  <option value="Poor vision at night">Poor vision at night</option>
+  <option value="Double vision">Double vision</option>
+  <option value="Eye pain">Eye pain</option>
+  <option value="Red-eye">Red-eye</option>
+  <option value="Vision Loss">Vision Loss</option>
+  <option value="Dry or watery eyes">Dry or watery eyes</option>
+  <option value="burning or itching">burning or itching</option>
+  <option value="Tired">Tired</option>
+  <option value="Blurred vision for distant objects, near objects, or both">Blurred vision for distant objects, near objects, or both</option>
+  <option value="Headache">Headache</option>
+  <option value="Irritation, itching">Irritation, itching</option>
+  <option value="Foreign body sensation eye discomfort">Foreign body sensation eye discomfort</option>
+  <option value="Burning">Burning</option>
+  <option value="Itching">Itching</option>
+  <option value="Loss of vision">Loss of vision</option>
+  <option value="Blurred Vision">Blurred Vision</option>
+  <option value="Discharge or stickiness">Discharge or stickiness</option>
+        </select><br><br><br>
         <button type="submit" class="btn btn-primary btn-block btn-large" style='background-color:lightsalmon; color: white; font-size: 100%; padding: 1%;'>&nbsp&nbsp &nbsp Predict&nbsp&nbsp &nbsp  </button><br><br>
     </form>
     </div>
    <br>
    <br>
-     <div style='color: white; background-color: #333;text-align: center; font-size: 150%;'>
+     <div style='color: white; background-image: url(https://img.freepik.com/free-photo/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg?size=626&ext=jpg);background-repeat: no-repeat;background-size: cover;background-color: rgba(0,0,0, 0.4);
+    background-blend-mode: darken;text-align: center; font-size: 150%;'>
          <br><br>
      {{ prediction_text }}
          <br>
          <br><br>
      </div><br><br>
-    <div style="color: white; background-color:#333;text-align:center; font-size: 150%;"><br><br>
+    <div style="color: white;background-image:url(https://techchannel.com/getattachment/1c269c15-8656-4e8a-909a-71358ccc76d3/techu-talks.jpg);font-family: cursive;background-repeat: no-repeat;background-size: cover;background-color: rgba(0,0,0, 0.4);
+    background-blend-mode: darken;text-align:center; font-size: 150%;"><br><br>
         <h4>CHECK THE RISK LEVEL OF DISEASE</h4><br>
         <p>Enter the range within 1-10</p><br>
         <p>Enter the effect of Symptom 1:<input id="first"></p>
